Closed
Bug 417533
Opened 18 years ago
Closed 18 years ago
Resizing linked images fails in contentEditable elements
Categories
(Core :: DOM: Editor, defect, P4)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: spam, Assigned: peterv)
References
()
Details
(Keywords: regression, testcase)
Attachments
(2 files, 1 obsolete file)
|
803 bytes,
text/html
|
Details | |
|
3.00 KB,
patch
|
jst
:
review+
jst
:
superreview+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12
Build Identifier:
Resizing of linked images fails in a contentEditable element.
Reproducible: Always
Steps to Reproduce:
1. Open the attached URL.
2. Try resizing the image.
3. Observe that it produces links and doesn't resize correctly.
Actual Results:
Can't resize images. It's impossible or very buggy.
Expected Results:
Should be resized just like a normal image element without an link.
Comment 1•18 years ago
|
||
Updated•18 years ago
|
Notes on the attachment 303304 [details]
There might be another bug too:
1. Click inside the editable element on the text, not on the image
2. THEN MOUSEDOWN and drag and drop the image to another location inside the editable element.
Actual results:
The linked image is cloned into the dropped location.
This does not reproduce if the stpes are:
1. Click inside the editable element on the text, not on the image
2. THEN CLICK and THEN drag and drop the image to another location inside the editable element.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P4
Flags: wanted1.9+
Flags: blocking1.9-
Updated•18 years ago
|
Flags: tracking1.9+
| Assignee | ||
Comment 3•18 years ago
|
||
This seems to fix it, but not sure if more is needed.
Assignee: nobody → peterv
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•18 years ago
|
||
Prevent the default behaviour (dragging) from kicking in when we're starting to resize.
Attachment #316624 -
Attachment is obsolete: true
Attachment #316689 -
Flags: superreview?(jst)
Attachment #316689 -
Flags: review?(jst)
Updated•18 years ago
|
Attachment #316689 -
Flags: superreview?(jst)
Attachment #316689 -
Flags: superreview+
Attachment #316689 -
Flags: review?(jst)
Attachment #316689 -
Flags: review+
| Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 316689 [details] [diff] [review]
v1.1
Low risk fix. No way to test currently.
Attachment #316689 -
Flags: approval1.9?
Comment 6•18 years ago
|
||
Comment on attachment 316689 [details] [diff] [review]
v1.1
a1.9+=damons
Attachment #316689 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•18 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Version: unspecified → Trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•