Fix for bug 417533 (Resizing linked images fails in contentEditable elements). r/sr=jst, a=damon.